# bolos

./: .gitignore  README.rst  pyproject.toml
bolos/: grid.py  parser.py  process.py  solver.py  target.py
samples/: O2_ISTLisbon_dataset.txt  O2_ISTLisbon_dataset_w_Coulomb.txt  validation_w_ee.py  validation_w_ee_ei.py
samples/to_compare/: O2_with_ee_collision__without_ei_collisions__id_0.1__Tgas_300K__P_1e5Pa  O2_without_ee_collision__without_ei_collisions__Tgas_300K  README.md
